-----------------------------------------
- insertion of handwritten equations (Windows 7 only, using TexTablet)
- improved table-code formating, including options to specify the desired format
- metadata support in LaTeX templates and table templates
- checking for the correct version of the runtime library
- more context menus (fold panel, bookmark panel)
- optionally more bold cursor
- several bug fixes (crashes, compilation, focus, ...)


TeXstudio 2.3 -> TeXstudio 2.4  SVN 3255
-----------------------------------------
- new build system which allows easier combination of several commands
- support many new tools: xelatex, lualatex, biber, latexmk, texindy
- embedded pdf viewer
- bookmark manager and persistent bookmarks
- inline grammar checking using LanguageTool
- basic syntax highlighting for lua and for dtx files
- biblatex support
- citation API to insert citations from other applications (JabRef plugin available)
- table autoformating
- improved appearance
- update checker
- extended scripting: gui/dialog creation, access to other documents/programs/menus, background mode and events
- crash protection
- many small improvements
- several bug fixes


TexMakerX 2.2 -> TeXstudio 2.3  SVN 2459
-----------------------------------------
- list of commands accepting \ref/\cite-references can be changed
- remember search history
- support for different dictionaries per document
- find-invalid-bracket feature
- almost word level inverse pdf search
- complete file names in graphic including macros
- improved graphics insertion (new assistant allows editing of existing code, insert by drag-and-drop and copy/paste)
- improved BibTeX auto calling
- more methods available for scripting 
- several bug fixes (especially crashs in the pdf viewer/syntax check/structure view) and minor improvements

TexMakerX 2.1 -> TeXstudio 2.2  SVN 2143
-----------------------------------------
- pdf viewer can show multiple pages in continous fashion